@@ -50,26 +50,6 @@ DirectoryView.registerDirectory('skins', product_globals)
 DirectoryView.registerDirectory('skins/Poi',
                                     product_globals)
 
-# This code *has* to be run before PoiTracker is imported as it uses
-# the validator we are registering here by importing a module.  That
-# means for instance that putting it in the initialize method is too
-# late as content.PoiTracker is already imported when loading the
-# configure.zcml.
-
-# The Poi validator was copied to DataGridField 1.6 beta 3 so it may
-# already be registered.  In that case we do not care which of the two
-# validators is used.  The plan is to remove the validator from Poi
-# when DataGridField 1.6 is widely available.  No imports here are
-# needed in that case as DataGridField then takes care of that.
-
-from Products.validation.exceptions import AlreadyRegisteredValidatorError
-try:
-    from Products.Poi import validators
-except AlreadyRegisteredValidatorError:
-    # This is never actually raised except in commented out code, but
-    # let's be careful and catch this exception.
-    pass
-
 
 def initialize(context):
     # imports packages and types for registration
