@@ -5,7 +5,15 @@ Changelog for Poi
 1.2.5 (unreleased)
 ------------------
 
-- Added dependecies to metadata.xml in profile. 
+- Explicitly depend on Products.DataGridField >= 1.6b3 as that is the
+  first pypi release.  That release has a GS profile (that we depend
+  on in our metadata.xml) and it has the isDataGridFilled validator
+  (that we now remove from Poi).  Removed DataGridField from the quick
+  installer dependencies as we indeed now list this dependency in
+  metadata.xml.
+  [maurits]
+
+- Added dependencies to metadata.xml in profile. 
   [jensens]
 
 
